--- a/setup.cfg
+++ b/setup.cfg
@@ -5,16 +5,8 @@ include_package_data = True
 python_requires  = >=3.8
 packages         = find:
 
-[options.package_data]
-* = *.c, *.h
-
 [options.exclude_package_data]
-* = *.py, *.nim, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
-
-[options.packages.find]
-where   = .
-include = *.c, *.h
-exclude = *.py, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
+* = *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
 
 [metadata]
 name             = faster_than_requests
@@ -45,4 +37,4 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Software Development
-version = 
+# version = 
