--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
 
     - name: Build Linux
       if: false  # runner.os == 'Linux'
+      shell: bash
       run: |
         python setup.py bdist_wheel
         WHEEL=dist/$(python3 -c 'import pathlib;print([*pathlib.Path("dist").glob("juancarlospaco*")][0].name.replace("linux", "manylinux1"))')
@@ -46,6 +47,7 @@ jobs:
 
     - name: Build Windows Mac
       if: runner.os == 'macOS' || runner.os == 'Windows'
+      shell: bash
       run: |
         python setup.py bdist_wheel
         # twine upload dist/*
