--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     name: ${{ matrix.platform }}
@@ -30,14 +30,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install setuptools wheel twine nimporter
+        python -m pip install --upgrade setuptools wheel twine nimporter
 
     - uses: juancarlospaco/nimpretty-action@main
       with:
         folders: "src"
 
     - name: Build Linux
-      if: false  # runner.os == 'Linux'
+      if: runner.os == 'Linux'
       shell: bash
       run: |
         python setup.py bdist_wheel
