--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,51 +1,85 @@
-name: Build
+name: CI
 on: push
 
 jobs:
-  build:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    name: ${{ matrix.platform }}
-    runs-on: ${{ matrix.platform }}
+
+  # ----------------------------------------------------------------------------
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: "3.9"
-    - uses: jiro4989/setup-nim-action@v1.3
-      with:
-        nim-version: "1.4.2"
+      - uses: actions/checkout@v2
 
-    - name: Set Environment Variables
-      uses: allenevans/set-env@v2.0.0
-      with:
-        TWINE_USERNAME:        ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD:        ${{ secrets.PYPI_PASSWORD }}
-        TWINE_NON_INTERACTIVE: 1
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel twine nimporter
+      - uses: jiro4989/setup-nim-action@v1.0.2
+        with:
+          nim-version: '1.4.2'
 
-    - uses: juancarlospaco/nimpretty-action@main
-      with:
-        folders: "src"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install setuptools wheel twine nimporter
+      - name: Build and publish
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          python setup.py bdist_wheel
+          WHEEL=dist/$(python3 -c 'import pathlib;print([*pathlib.Path("dist").glob("pebaz*")][0].name.replace("linux", "manylinux1"))')
+          mv dist/$(python -c "import pathlib;print([*pathlib.Path('dist').glob('pebaz*')][0].name)") $WHEEL
+          ls dist
 
-    - name: Build Linux
-      if: runner.os == 'Linux'
-      shell: bash
-      run: |
-        python setup.py bdist_wheel
-        WHEEL=dist/$(python3 -c 'import pathlib;print([*pathlib.Path("dist").glob("juancarlospaco*")][0].name.replace("linux", "manylinux1"))')
-        mv dist/$(python -c "import pathlib;print([*pathlib.Path('dist').glob('juancarlospaco*')][0].name)") $WHEEL
+  # ----------------------------------------------------------------------------
+  build-win32:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
 
-    - name: Build Windows Mac
-      if: runner.os == 'macOS' || runner.os == 'Windows'
-      shell: bash
-      run: |
-        python setup.py bdist_wheel
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.x'
+
+      - uses: jiro4989/setup-nim-action@v1.0.2
+        with:
+          nim-version: '1.0.6'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install setuptools wheel twine nimporter
+      - name: Build and publish
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          python setup.py bdist_wheel
+          ls dist
+  # ----------------------------------------------------------------------------
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.x'
+      - uses: jiro4989/setup-nim-action@v1.0.2
+        with:
+          nim-version: '1.0.6'
+
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install setuptools wheel twine nimporter
+      - name: Build and publish
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          python3 setup.py bdist_wheel
+          ls dist
