--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set Environment Variables
+        uses: allenevans/set-env@v2.0.0
+        with:
+          TWINE_USERNAME:        ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD:        ${{ secrets.PYPI_PASSWORD }}
+          TWINE_NON_INTERACTIVE: 1
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
